[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "autopep8>=2.0.1",
]

[project]
name = "filestore"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "asyncio>=3.4.3",
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.4",
    "fastapi[all]>=0.93.0",
    "sqlalchemy>=2.0.5.post1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "schedule>=1.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy-utils>=0.40.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
